# ppvm

./: .gitignore  AGENTS.md  AUTHORS  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Ion.toml  LICENSE  NOTICE  README.md  index.html  licenserc.header.txt  licenserc.toml  mise.toml  prek.toml
crates/ppvm-cli/: Cargo.toml  README.md
crates/ppvm-cli/examples/: bit_flip_correction.sst  ghz.sst  heisenberg_zz.sst  loop_feedforward.pseudo  loop_feedforward.sst  simple_loop.sst
crates/ppvm-cli/src/: commands.rs  main.rs  repl.rs  tui.rs
crates/ppvm-lindblad/: Cargo.toml
crates/ppvm-lindblad/benches/: drug_dipolar.rs  kossakowski.rs  spmv_scaling.rs
crates/ppvm-lindblad/examples/: drug_profile.rs  spmv_scaling.rs
crates/ppvm-lindblad/src/: config.rs  error.rs  expm.rs  lib.rs  mf_expm.rs  orbit_rep.rs
crates/ppvm-pauli-sum/: Cargo.toml
crates/ppvm-pauli-sum/benches/: gate.rs  micro.rs  random-circuit.rs  trotter-scaling.rs  trotter.rs  truncation-weight.rs
crates/ppvm-pauli-sum/examples/: hash_quality.rs  trotter_qubit_sweep.rs  trotter_storage_cliff.rs
crates/ppvm-pauli-sum/src/: lib.rs  strategy.rs  symmetry.rs
crates/ppvm-pauli-sum/tests/: cnot.rs  ghz.rs  loss.rs  noise.rs  preserve.rs  strategy.rs  symmetry_api.rs  trotter.rs  truncation_semantics.rs
crates/ppvm-pauli-word/: Cargo.toml
crates/ppvm-pauli-word/src/: lib.rs
crates/ppvm-paulisum/: Cargo.toml
crates/ppvm-paulisum/benches/: gate.rs  micro.rs  random-circuit.rs  trotter-scaling.rs  trotter.rs
crates/ppvm-paulisum/src/: lib.rs  strategy.rs
crates/ppvm-paulisum/tests/: cnot.rs  ghz.rs  loss.rs  noise.rs  preserve.rs  strategy.rs  trotter.rs  truncation_semantics.rs
crates/ppvm-python/: Cargo.toml  pyproject.toml  test_basics.py
crates/ppvm-python-native/: Cargo.toml  build.rs  ppvm_python_native.pyi  pyproject.toml
crates/ppvm-python-native/src/: interface.rs  interface_tableau.rs  interface_tableau_sum.rs  interface_timeevolve.rs  lib.rs  lindblad.rs  stim_program.rs  symmetry.rs
crates/ppvm-python/src/: __init__.py  interface.rs  interface_test.rs  lib.rs  python_wrapper.py
crates/ppvm-runtime/: Cargo.toml
crates/ppvm-runtime/benches/: gate.rs  micro.rs  random-circuit.rs  tableau-msd-stim.rs  tableau-msd.rs  tableau.rs  trotter-scaling.rs  trotter.rs  truncation-weight.rs
crates/ppvm-runtime/examples/: hash_quality.rs  trotter_qubit_sweep.rs  trotter_storage_cliff.rs
crates/ppvm-runtime/src/: char.rs  config.rs  lib.rs  strategy.rs  symmetry.rs
crates/ppvm-runtime/tests/: cnot.rs  ghz.rs  loss.rs  measure.rs  noise.rs  preserve.rs  strategy.rs  tableau.rs  trotter.rs  truncation_semantics.rs
crates/ppvm-stim/: Cargo.toml
crates/ppvm-stim/benches/: stim-circuits.rs  tableau-msd-stim.rs
crates/ppvm-stim/examples/: msd_noiseless_cache.rs  msd_noisy_cache.rs  surface_d30.rs  surface_d30.stim
crates/ppvm-stim/src/: executor.rs  lib.rs  normalize.rs  prepare.rs  tableau_program.rs  validate.rs
crates/ppvm-stim/tests/: cultivation.rs  executor.rs  measurement_record.rs  mpp.rs  normalize.rs  parser_errors.rs  parser_gates.rs  parser_measure.rs  parser_noise.rs  parser_snapshots.rs  parser_syntax.rs  parser_tags.rs  prepare.rs  run.rs  stim_corpus.rs  validate.rs  xy_and_feedforward.rs
crates/ppvm-sym/: Cargo.toml
crates/ppvm-sym/src/: add.rs  coeff.rs  display.rs  eval.rs  lib.rs  mul.rs  term.rs
crates/ppvm-tableau/: Cargo.toml
crates/ppvm-tableau-sum/: Cargo.toml
crates/ppvm-tableau-sum/benches/: clifford_rehash.rs  msd.rs  parallelization_test.rs  storage_compare.rs
crates/ppvm-tableau-sum/examples/: msd-noisy-bench.rs  msd-noisy-compare.rs  msd-noisy-map.rs  msd-noisy.rs  msd.rs  sample_threshold_bench.rs  truncation-scaling.rs
crates/ppvm-tableau-sum/src/: data.rs  lib.rs  measure.rs  noise.rs  sampler.rs
crates/ppvm-tableau-sum/tests/: sampler_vs_pure.rs
crates/ppvm-tableau/benches/: branch-coalesce-scaling.rs  clifford_batch.rs  clifford_crossover.rs  measure-all.rs  measure-scaling.rs  measure_batch_profiling.md  measure_many_profiling.md  micro.rs  rot2-apply.rs  tableau-msd-fused.rs  tableau-msd-stim.rs  tableau-msd.rs  tableau.rs
crates/ppvm-tableau/examples/: profile_breakdown.rs  profile_combined.rs  profile_measure.rs  profile_measure_all.rs  profile_measure_all_flame.rs  profile_measure_batch.rs  profile_measure_many.rs  profile_msd.rs  profile_rayon.rs  profile_scaling.rs
crates/ppvm-tableau/src/: data.rs  display.rs  expectation.rs  lib.rs  map.rs  measure.rs  measure_all.rs  mod.rs  noise.rs  observable.rs  simd.rs  sparsevec.rs  stim.rs  sum.rs  tableau.rs  tableau_index.rs  tableau_like.rs  tests.rs  trajectory.rs
crates/ppvm-tableau/tests/: apply_path.rs  gates.rs  measure.rs  measure_batch.rs  measure_many.rs  msd_batch.rs  tableau.rs
crates/ppvm-timeevolve/: CLAUDE.md  Cargo.toml  GUIDELINES.md  PLAN.md
crates/ppvm-timeevolve/agents/: developer.md  perf-developer.md  plan_heisenberg_output.md  reviewer.md  role_switch.py  state.md
crates/ppvm-timeevolve/benches/: cross_site.rs  fixture.rs  indexmap.rs  rhs.rs  step.rs
crates/ppvm-timeevolve/examples/: probe_size.rs  scaling.rs  superradiance.rs  superradiance_flame.rs
crates/ppvm-timeevolve/plans/: PLAN.md  PLAN_HEISENBERG_OUTPUT.md  PLAN_PHASE2.md  PLAN_PHASE3.md  PLAN_PHASE4.md  PLAN_PHASE5.md  PLAN_PYTHON_BINDINGS.md  TASKS.md  TASKS_HEISENBERG_OUTPUT.md  (+3 more)
crates/ppvm-traits/: Cargo.toml
crates/ppvm-tui/: Cargo.toml
crates/ppvm-vihaco/: Cargo.toml
crates/vihaco-circuit-isa/: Cargo.toml
ppvm-python/: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
ppvm-python/demo/: hello_world.py  lindblad_adaptive.py  lindblad_pc_scaling.py  msd-noisy.py  msd.py  msd.stim  squin_kernel.py  stim.py  trotter_ladder.py
ppvm-python/docs/: generalized_tableau.md  index.md  install.md  loss.md
ppvm-python/test/: test_basics.py  test_heisenberg_ordering.py  test_lindblad.py  test_loss.py  test_momentum_merge.py  test_preserve.py  test_product_state.py  test_stim_api.py  test_superradiance.py  test_timeevolve.py  test_truncate_kwarg.py  test_u1.py
(+10031 files in other folders)
