[package]
name = "ppvm"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
num = "0.4.3"
ppvm-runtime = { version = "0.1.0", path = "crates/ppvm-runtime" }
ppvm-tableau = { version = "0.1.0", path = "crates/ppvm-tableau" }
ppvm-sym = { version = "0.1.0", path = "crates/ppvm-sym" }

[workspace]
members = [
    "crates/ppvm-runtime",
    "crates/ppvm-sym",
    "crates/ppvm-lindblad",
    "crates/ppvm-python-native",
    "crates/ppvm-tableau",
    "crates/ppvm-stim", "crates/stim-parser",
    # Runnable copies of the Rust code blocks in skills/ppvm-usage/SKILL.md.
    # Built by `cargo build --workspace --all-targets` in CI so the skill
    # can't silently drift away from the public API.
    "skills/ppvm-usage/examples/rust",
]

[[example]]
name = "symbolic"
