[package]
name = "ppvm"
version = "0.1.0"
edition = "2024"

[dependencies]
ppvm-pauli-sum = { version = "0.1.0", path = "crates/ppvm-pauli-sum" }
ppvm-tableau = { version = "0.1.0", path = "crates/ppvm-tableau" }
ppvm-sym = { version = "0.1.0", path = "crates/ppvm-sym" }

[workspace]
members = [
    "crates/ppvm-traits",
    "crates/ppvm-pauli-word",
    "crates/ppvm-pauli-sum",
    "crates/ppvm-sym",
    "crates/ppvm-python-native",
    "crates/ppvm-tableau",
    "crates/ppvm-stim", "crates/stim-parser",
    "crates/ppvm-tableau-sum",
    # Runnable copies of the Rust code blocks in skills/ppvm-usage/SKILL.md.
    # Built by `cargo build --workspace --all-targets` in CI so the skill
    # can't silently drift away from the public API.
    "skills/ppvm-usage/examples/rust",
]

# Keep function names and line numbers in release builds so profilers
# (cargo-flamegraph, samply, Instruments) produce readable output. Adds
# negligible binary bloat compared to full debug info.
[profile.release]
debug = "line-tables-only"

[[example]]
name = "symbolic"
