[project]
name = "ppvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Plankensteiner", email = "dplankensteiner@quera.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bloqade-circuit>=0.14.1",
    "kirin>=0.0.15",
]

[project.scripts]
ppvm = "ppvm:main"

[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

# Single mixed Rust/Python wheel: maturin compiles the PyO3 crate and drops it
# in next to the pure-Python sources as the private `ppvm._core` submodule, so
# users only ever `import ppvm`.
[tool.maturin]
manifest-path = "../crates/ppvm-python-native/Cargo.toml"
python-source = "src"
module-name = "ppvm._core"

[tool.uv]
python-preference = "only-managed"

[tool.ruff]
line-length = 100
extend-exclude = ["docs/", "demo/"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM", "RUF", "I"]
ignore = [
    "RUF002",  # ambiguous unicode in docstrings (math notation)
    "RUF003",  # ambiguous unicode in comments (math notation)
    "B905",    # zip() without strict= (too noisy for iterating matched-length lists)
    "UP007",   # Union[X, Y] → X | Y (32-member unions are more readable with Union)
    "E501",    # line too long in docstring math formulas
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["docs/"]

[tool.pytest.ini_options]
# Benchmarks (test/benchmarks/) only time when explicitly enabled via
# --benchmark-enable; otherwise they run once as smoke tests.
addopts = "--benchmark-disable"

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]
doc = [
    "griffe-inherited-docstrings>=1.1.1",
    "matplotlib>=3.10.8",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocstrings[python]>=0.27.0",
]
