[package]
name = "ppvm-pauli-word"
version = "0.1.0"
edition = "2024"

[dependencies]
ppvm-traits = { version = "0.1.0", path = "../ppvm-traits" }
bitvec = "1.0.1"
bytemuck = { version = "1", features = ["min_const_generics"] }
fxhash = "0.2.1"
num = "0.4.3"
anyhow = "1.0.100"
itertools = "0.14.0"
gxhash = { version = "3.5.0", features = ["deterministic"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
bincode = { version = "2.0.1", optional = true }

[features]
default = ["gxhash"]
gxhash = ["dep:gxhash"]
serde = ["dep:serde"]
bincode = ["dep:bincode"]
