[package]
name = "ppvm-python-native"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppvm_python_native"
crate-type = ["cdylib"]

[dependencies]
paste = "1.0.15"
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
ppvm-timeevolve = { version = "0.1.0", path = "../ppvm-timeevolve" }
pyo3 = { version = "0.27.0", features = ["multiple-pymethods"] }
