[package]
name = "ppvm-python-native"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppvm_python_native"
crate-type = ["cdylib"]

[dependencies]
bnum = "0.13.0"
mimalloc = { version = "0.1", default-features = false }
dashmap = "6.1.0"
fxhash = "0.2.1"
num = "0.4.3"
numpy = "0.27"
paste = "1.0.15"
ppvm-lindblad = { version = "0.1.0", path = "../ppvm-lindblad" }
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
ppvm-stim = { version = "0.1.0", path = "../ppvm-stim" }
ppvm-tableau = { version = "0.1.0", path = "../ppvm-tableau" }
pyo3 = { version = "0.27.0", features = ["multiple-pymethods"] }
rayon = "1.11"
