[package]
name = "ppvm-python-native"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppvm_python_native"
crate-type = ["cdylib"]
# Python exercises this extension through pytest. Cargo's generated lib test
# binary cannot link an extension-module crate without embedding libpython.
test = false

[dependencies]
bnum = "0.13.0"
paste = "1.0.15"
ppvm-pauli-sum = { version = "0.1.0", path = "../ppvm-pauli-sum" }
ppvm-stim = { version = "0.1.0", path = "../ppvm-stim", features = ["rayon"] }
ppvm-tableau = { version = "0.1.0", path = "../ppvm-tableau" }
ppvm-tableau-sum = { version = "0.1.0", path = "../ppvm-tableau-sum", features = ["rayon"] }
# abi3-py310: build a single stable-ABI wheel that loads on CPython 3.10+,
# instead of one wheel per Python version.
pyo3 = { version = "0.29.0", features = [
    "extension-module",
    "multiple-pymethods",
    "abi3-py310",
] }
