[package]
name = "ppvm-python"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ppvm_python"
crate-type = ["cdylib"]

[dependencies]
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
pyo3 = "0.27.0"
