[package]
name = "ppvm-stim"
version = "0.1.0"
edition = "2024"

[dependencies]
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
ppvm-tableau = { version = "0.1.0", path = "../ppvm-tableau" }
bitvec = "1.0.1"
itertools = "0.14"
num = "0.4.3"
thiserror = "2"
stim-parser = { version = "0.1.0", path = "../stim-parser" }

[dev-dependencies]
# Used by tests/data fixtures and statistical assertions.
rand = "0.10"
criterion = "0.7.0"

[[bench]]
name = "tableau-msd-stim"
harness = false
