[package]
name = "ppvm-stim"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Parallelise multi-shot sampling across the global rayon thread pool.
rayon = ["dep:rayon"]

[dependencies]
ppvm-pauli-sum = { version = "0.1.0", path = "../ppvm-pauli-sum" }
ppvm-tableau = { version = "0.1.0", path = "../ppvm-tableau" }
bitvec = "1.0.1"
itertools = "0.14"
num = "0.4.3"
smallvec = "1.15"
thiserror = "2"
stim-parser = { version = "0.1.0", path = "../stim-parser" }

# rayon needs OS threads — native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { version = "1", optional = true }

[dev-dependencies]
# Used by benchmarks.
criterion = "0.7.0"
bnum = { version = "0.13", features = ["numtraits"] }

[[bench]]
name = "tableau-msd-stim"
harness = false

[[bench]]
name = "stim-circuits"
harness = false
