[package]
name = "ppvm-tableau-sum"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
fxhash = "0.2.1"
num = "0.4.3"
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
ppvm-tableau = { version = "0.1.0", path = "../ppvm-tableau", features = ["rayon"] }
rand = "0.10.1"

[dev-dependencies]
criterion = "0.8.2"


[[bench]]
name = "msd"
harness = false
