[package]
name = "ppvm-tableau-sum"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
fxhash = "0.2.1"
gxhash = "3.5.0"
num = "0.4.3"
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
ppvm-tableau = { version = "0.1.0", path = "../ppvm-tableau", features = ["rayon"] }
rand = "0.10.1"
smallvec = "1.15"

[dev-dependencies]
criterion = "0.8.2"
rayon = "1"
mimalloc = { version = "0.1", default-features = false }


[[bench]]
name = "msd"
harness = false

[[bench]]
name = "parallelization_test"
harness = false

[[bench]]
name = "clifford_rehash"
harness = false

[[bench]]
name = "storage_compare"
harness = false
