[package]
name = "ppvm-tableau-sum"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
bytemuck = { version = "1", features = ["min_const_generics"] }
fxhash = "0.2.1"
num = "0.4.3"
ppvm-traits = { version = "0.1.0", path = "../ppvm-traits" }
ppvm-pauli-word = { version = "0.1.0", path = "../ppvm-pauli-word" }
ppvm-pauli-sum = { version = "0.1.0", path = "../ppvm-pauli-sum" }
ppvm-tableau = { version = "0.1.0", path = "../ppvm-tableau" }
rand = "0.10.1"
smallvec = "1.15"

# Native-only deps: gxhash (AES, used for the word_fingerprint hasher — see the
# target-gated alias in src/storage/mod.rs) and rayon (OS threads). Pruned on
# wasm32; fxhash backs the fingerprint there.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gxhash = "3.5.0"
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.8.2"
rayon = "1"
mimalloc = { version = "0.1", default-features = false }

[features]
default = []
rayon = ["dep:rayon", "ppvm-tableau/rayon"]

[[bench]]
name = "msd"
harness = false

[[bench]]
name = "parallelization_test"
harness = false

[[bench]]
name = "clifford_rehash"
harness = false

[[bench]]
name = "storage_compare"
harness = false

[[example]]
name = "sample_threshold_bench"
required-features = ["rayon"]

[[example]]
name = "msd-noisy-compare"
required-features = ["rayon"]

[[example]]
name = "truncation-scaling"
required-features = ["rayon"]
