[package]
name = "ppvm-tableau"
version = "0.1.0"
edition = "2024"

[features]
default = []
rayon = ["dep:rayon"]

[dependencies]
bitvec = "1.0.1"
fxhash = "0.2.1"
bnum = { version = "0.13.0", features = ["numtraits"] }
itertools = "0.14.0"
num = "0.4.3"
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
rand = "0.10.1"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = "0.7.0"
insta = { version = "1.43.2", features = ["yaml"] }

[[bench]]
name = "tableau"
harness = false

[[bench]]
name = "tableau-msd"
harness = false

[[bench]]
name = "tableau-msd-fused"
harness = false

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "measure-scaling"
harness = false

[[bench]]
name = "measure-all"
harness = false
