[package]
name = "ppvm-timeevolve"
version = "0.1.0"
edition = "2024"

[dependencies]
fxhash = "0.2.1"
ppvm-runtime = { version = "0.1.0", path = "../ppvm-runtime" }
rayon = "1"
smallvec = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rhs"
harness = false

[[bench]]
name = "step"
harness = false

[[bench]]
name = "indexmap"
harness = false

[[bench]]
name = "cross_site"
harness = false
