[package]
name = "ppvm-traits"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
bytemuck = { version = "1", features = ["min_const_generics"] }
fxhash = "0.2.1"
num = "0.4.3"
ahash = { version = "0.8.12", optional = true }
dashmap = { version = "6.1.0", features = ["rayon"], optional = true }
gxhash = { version = "3.5.0", features = ["deterministic"], optional = true }
indexmap = { version = "2.11.4", optional = true }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[features]
default = ["dashmap", "gxhash", "ahash", "indexmap"]
dashmap = ["dep:dashmap", "dep:rayon"]
gxhash = ["dep:gxhash"]
ahash = ["dep:ahash"]
indexmap = ["dep:indexmap"]
