[package]
name = "ppvm-traits"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
bytemuck = { version = "1", features = ["min_const_generics"] }
fxhash = "0.2.1"
num = "0.4.3"
indexmap = { version = "2.11.4", optional = true }

# Native-only optional deps: gxhash needs AES intrinsics, dashmap/rayon need OS
# threads, and ahash pulls getrandom — none build on wasm32. They are pruned on
# wasm, where the matching features go inert (see the `not(target_arch =
# "wasm32")` code gates), so a wasm build silently drops these acceleration
# paths. On 64-bit native nothing changes.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ahash = { version = "0.8.12", optional = true }
dashmap = { version = "6.1.0", features = ["rayon"], optional = true }
gxhash = { version = "3.5.0", features = ["deterministic"], optional = true }
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[features]
default = ["dashmap", "gxhash", "ahash", "indexmap"]
dashmap = ["dep:dashmap", "dep:rayon"]
gxhash = ["dep:gxhash"]
ahash = ["dep:ahash"]
indexmap = ["dep:indexmap"]
