[package]
name = "vihaco-circuit-isa"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.10"
eyre = "0.6.12"
smallvec = "1.15.1"
vihaco = { version = "0.1.0", git = "https://github.com/QuEraComputing/vihaco" }
vihaco-parser = { version = "0.1.0", git = "https://github.com/QuEraComputing/vihaco" }
vihaco-parser-core = { version = "0.1.0", git = "https://github.com/QuEraComputing/vihaco" }
